<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Wars</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_day">GameDayActivity</string>
    <string name="gamedayhelp">Game Day Help</string>
    <string name="cash">Cash</string>
    <string name="bank">Bank</string>
    <string name="day">Day</string>
    <string name="trading_boosts">Trading Boosts</string>
    <string name="advance">Advance</string>
    <string name="question_mark">\?</string>
    <string name="ok">OK</string>
    <string name="help_detail">This is the main game screen which represents one day of stock trading. Use this screen to buy and sell stocks, withdraw or deposit money to/from the bank, and pay off debt.</string>
    <string name="back">Back</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="help">Help</string>
    <string name="stock_wars">Stock Wars</string>
    <string name="cancel">Cancel</string>
    <string name="choose_game_length">Choose game length</string>
    <string name="title_activity_main_menu_help">Stock Wars Intro</string>
    <string name="main_menu_help">Welcome to Stock Wars! This game is based on stock market trading. In order to play, you must buy stocks at the lowest possible prices and sell them at the highest possible prices. Pressing the \"Advance\" button advances the game by one day and changes the prices of the stocks. Keep doing this until the game ends and see how much you have earned!</string>
    <string name="main_menu_help_title">Stock Wars Help</string>
    <string name="results">Results</string>
    <string name="title_activity_game_day_help">Stock Wars Help</string>
    <string name="debt">Debt</string>
    <string name="pay_debt">Pay Debt</string>
    <string name="chafe_bank">Chafe Bank</string>
    <string name="chafe_bank_intro">Welcome to Chafe bank, From here you can make deposits, withdrawals and pay off your debt!</string>
    <string name="stock_name">Stock Name</string>
    <string name="stock_price">Stock Price</string>
    <string name="shares_owned">Shares Owned</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="title_activity_results">Game Results</string>
    <string name="congrats_results">Congratulations! You have completed Stock Wars. Let\'s see how you did...</string>
    <string name="net">Net</string>
    <string name="most_purchased">Most Purchased</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="stock_name_history_title">Stock Name History</string>
    <string name="no_broker_message">In order to view this stock\'s price history, you must purchase the Stock Broker trading boost from the Trading Boosts section.</string>
    <string name="successful_launch">Successful Product Launch!</string>
    <string name="ceo_fired">CEO Fired!</string>
    <string name="ad_campaign">Huge Ad Campaign!</string>
    <string name="product_recall">Major Product Recalled!</string>
    <string name="lost_lawsuit">Major Lawsuit Lost!</string>
    <string name="new_location">New Office Opened!</string>
    <string name="successful_launch_desc">The company has just released a major product and people absolutely love it! Their stock price just took a huge jump!</string>
    <string name="ceo_fired_desc">The board of directors of this company has decided it is time for a change. The CEO has just been terminated! This sudden change in corporate governance has shaken investors\' confidence in the company. Stock prices fall greatly!</string>
    <string name="ad_campaign_desc">The company has just started a major ad campaign across the country, bringing in a multitude of new customers. Stock price quickly climbs!</string>
    <string name="product_recall_desc">The company has just recalled their biggest product! One million units are faulty and have made the lives of many people very difficult... Stock price plummets!</string>
    <string name="new_location_desc">The company has just opened up another corporate office in a new city! This expansion is surely a good sign and has investors very optimistic about their future. Stock price rises fast!</string>
    <string name="lost_lawsuit_desc">The company has just been defeated in a very big legal battle. Losses due to this lawsuit are staggering. The company\'s stock takes a huge dive!</string>
    <string name="random_event_title">Random Event Title</string>
    <string name="random_event_description">Random Event Description</string>
    <string name="random_event_company">Random Event Company</string>
    <string name="trading_boosts_desc">This is the Trading Boosts menu. From here you can hire a Stock Broker or use insider info at the risk of getting caught by the police.</string>
    <string name="stock_broker">Stock Broker</string>
    <string name="insider_info">Insider Info</string>
    <string name="evaded_cops_title">Successfully Evaded Cops</string>
    <string name="evaded_cops_desc">You have successfully evaded the cops! You are now free to move about the stock market.</string>
    <string name="initially_caught_title">Evade Cops</string>
    <string name="initially_caught_desc">The Police got an anonymous tip that you have been involved in insider trading. Now you must try to evade the Cops by pressing the correct sequence in the alloted time.</string>
    <string name="sequence">Sequence</string>
    <string name="place_holder">TextView</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="initially_caught_pic_desc">Picture of cop chasing bad guy.</string>
    <string name="failed_evade_title">Failed to Evade Cops</string>
    <string name="failed_evade_desc">You have failed to evade the cops. As a result, you will lose a 1/3 of your liquid money.</string>
    <string name="failed_evade_pic_desc">Picture of cop catching bad guy.</string>
    <string name="main_menu_pic_desc">Picture of a stock price graph.</string>

</resources>
