<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/chafeBankIntroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/amountTextField"
        android:layout_centerHorizontal="true"
        android:text="@string/chafe_bank_intro"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/chafeBankTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chafeBankIntroText"
        android:layout_centerHorizontal="true"
        android:text="@string/chafe_bank"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/bankView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chafeBankTitleText"
        android:layout_alignParentLeft="true"
        android:text="@string/bank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cashView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bankView"
        android:layout_alignParentLeft="true"
        android:text="@string/cash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/debtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bankView"
        android:layout_alignParentRight="true"
        android:text="@string/debt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_alignParentLeft="true"
        android:text="@string/deposit" />

    <Button
        android:id="@+id/paydebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_alignParentRight="true"
        android:text="@string/pay_debt" />

    <Button
        android:id="@+id/withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/paydebt"
        android:layout_centerHorizontal="true"
        android:text="@string/withdraw" />

    <EditText
        android:id="@+id/amountTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amountText"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/withdraw"
        android:layout_marginBottom="106dp"
        android:layout_toLeftOf="@+id/amountTextField"
        android:text="@string/amount"
        android:textSize="20sp" />

</RelativeLayout>