<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultsActivity" >

    <TextView
        android:id="@+id/congratsResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/congrats_results"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cashResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/congratsResultsText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bankResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cashResultsText"
        android:layout_centerHorizontal="true"
        android:text="@string/bank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/debtResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bankResultsText"
        android:layout_centerHorizontal="true"
        android:text="@string/debt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/netResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/debtResultsText"
        android:layout_centerHorizontal="true"
        android:text="@string/net"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mostPurchasedResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/netResultsText"
        android:layout_centerHorizontal="true"
        android:text="@string/most_purchased"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/mainMenuResultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu_button"
        android:onClick="onMainMenu" />

    <Button
        android:id="@+id/newGameResultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenuResultsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game"
        android:onClick="onNewGame" />

</RelativeLayout>
