<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/initiallyCaughtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/initially_caught_title"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/initiallyCaughtImage"
        android:contentDescription="@string/initially_caught_pic_desc"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_below="@+id/initiallyCaughtTitle"
        android:layout_centerHorizontal="true"
        android:src="@drawable/evade_cops" />

    <TextView
        android:id="@+id/initiallyCaughtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/initiallyCaughtImage"
        android:text="@string/initially_caught_desc" />

    <TextView
        android:id="@+id/initiallyCaughtSequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/initiallyCaughtDesc"
        android:layout_centerHorizontal="true"
        android:text="@string/sequence" />

    <Button
        android:id="@+id/initiallyCaughtAButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/initiallyCaughtBButton"
        android:layout_alignBottom="@+id/initiallyCaughtBButton"
        android:layout_toLeftOf="@+id/initiallyCaughtBButton"
        android:text="@string/a" />

    <Button
        android:id="@+id/initiallyCaughtBButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/initiallyCaughtTitle"
        android:layout_marginBottom="40dp"
        android:text="@string/b" />

    <TextView
        android:id="@+id/timerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/initiallyCaughtAButton"
        android:layout_alignLeft="@+id/initiallyCaughtSequence"
        android:layout_marginBottom="24dp"
        android:text="@string/place_holder" />

    <TextView
        android:id="@+id/initiallyCaughtUInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/initiallyCaughtAButton"
        android:layout_alignBottom="@+id/initiallyCaughtAButton"
        android:layout_alignLeft="@+id/initiallyCaughtDesc"
        android:text="@string/place_holder" />

</RelativeLayout>
