<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameDayActivity" >

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/day"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/cash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cashTextView"
        android:text="@string/bank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bankButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onBankButton"
        android:text="@string/bank" />

    <Button
        android:id="@+id/tradingBoostsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bankButton"
        android:layout_centerHorizontal="true"
        android:text="@string/trading_boosts" />

    <Button
        android:id="@+id/advanceButon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tradingBoostsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/advance"
        android:onClick="onAdvanceButton" />

    <ListView
        android:id="@+id/stocksListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/advanceButon"
        android:layout_alignLeft="@+id/bankTextView"
        android:layout_below="@+id/bankTextView" >

    </ListView>

    <Button
        android:id="@+id/gameDayHelpButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/question_mark"
        android:onClick="onGameDayHelpButton" />

    <TextView
        android:id="@+id/debtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dayTextView"
        android:text="@string/debt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
