<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/help"
        android:onClick="onHelp" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resumeGameButton"
        android:layout_centerHorizontal="true"
        android:onClick="onNewGame"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/resumeGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/helpButton"
        android:layout_centerHorizontal="true"
        android:text="@string/resume_game"
        android:onClick="onResumeGame" />

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/stock_wars"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/main_menu_pic_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainMenuTitle"
        android:layout_centerHorizontal="true"
        android:src="@drawable/stockgraph" />

</RelativeLayout>
