<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/failedEvadeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/failed_evade_title"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/failedEvadeImage"
        android:contentDescription="@string/failed_evade_pic_desc"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_below="@+id/failedEvadeTitle"
        android:layout_centerHorizontal="true"
        android:src="@drawable/caughtbypolice" />

    <TextView
        android:id="@+id/failedEvadeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/failedEvadeImage"
        android:layout_centerHorizontal="true"
        android:text="@string/failed_evade_desc"
        android:textSize="16sp" />

    <Button
        android:id="@+id/backFailedEvade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />

</RelativeLayout>
