<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/randomEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/random_event_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/randomEventDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/randomEventCompany"
        android:layout_centerHorizontal="true"
        android:text="@string/random_event_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/randomEventCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/randomEventTitle"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/random_event_company"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/backRandomEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/randomEventDescText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/ok" />

</RelativeLayout>
